--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -15,29 +15,32 @@ Password notes: https://www.php.net/manual/en/faq.passwords.php
 "NEXT ON THE LIST" SUMMARY SECTION
 ///////////////////////////////////////////////////////
 
-FULL feature freeze until springtime, review ALL code / UI / UX and smooth all rough edges (find every flaming turd before we start a dumpster fire).
+ALWAYS do everything in the optimizations / bugs / tests / qa / other section of this list FIRST, before adding ANY new features.
 
-ALWAYS do everything in the optimizations / bugs / tests / other section of this list FIRST, before adding ANY new features.
+FULL feature freeze until springtime, review ALL code / UI / UX and smooth all rough edges (find every flaming turd before we start a dumpster fire).
 
 Youtube channels on the resources page, that MAY BE DYING (keep an eye on them): Crypto Trader, Crypto Bobby, and IMineBlocks.
 
 ///////////////////////////////////////////////////////
-OPTIMIZATIONS / BUGS / TESTS / OTHER SECTION
+OPTIMIZATIONS / BUGS / TESTS / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
-Alphabetically order printout from .../debugging/exchange-and-pairing-info.php
-
-Cross-browser test RTL (right to left) effects from middle eastern currency symbols being injected into the interface output for those currencies
 
 Add localcryptos API support?
 
 Do new screenshots.
 
-Review landing page, and SF page.
+Review landing page, SF page, help FAQ, and config.php settings documentation.
 
-Review help FAQ.
+Cross-browser test RTL (right to left) effects from middle eastern currency symbols being injected into the interface output for those currencies
 
-Review config.php settings documentation.
+Make default btc exchange in config.php optional, and auto-configure if invalid or left blank, based off the default primary currency setting (still log errors though). Additionally, consider defaulting to USD if the primary currency setting is invalid / blank as well (as long as we also error log any detected issues there too)??
+
+Wrap all interface English within a lang_translate() function call. Then from a developer perspective you can still fully see the interface logic. 
+
+Create help page modal for explanations on all config.php settings. Then we can run this through the upcoming lang_translate() function.
+
+Alphabetically order printout from .../debugging/exchange-and-pairing-info.php
 
 Test unicode mobile text message with no space in front of hex-encoded data (forgot to try that, coded and ready to go now...see content_data_encoding() and /DOCUMENTATION-ETC/Developing-maintaining/DEBUGGING.txt).
 
