--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2745,7 +2745,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.08.5:
 
--More developer optimizations / UX
+-More small bug fixes, UX revisions, developer optimizations
 
 -Bug fix for refreshing securely cached telegram chat config (if you change your telegram bot config) 
 
