--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2777,6 +2777,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 -------------------------------------------------------------------
 4.08.6:
 
+-Review / optimization of all CSS code
+
 -Yet more small bug fixes, UX revisions
 
 IMPORTANT NOTES: 
