--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -48,7 +48,7 @@ Cross-browser test RTL (right to left) effects from middle eastern currency symb
 Test unicode mobile text message with no space in front of hex-encoded data (forgot to try that, coded and ready to go now...see content_data_encoding() and /DOCUMENTATION-ETC/Developing-maintaining/DEBUGGING.txt).
 
 
-Code review ALL functions / logic.
+Code review ALL functions / logic (especially loops, for efficiency).
 
 
 ///////////////////////////////////////////////////////
