More minor misc. UX revisions
More minor misc. UX revisions

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -62,6 +62,9 @@ FEATURES / STRUCTURING SECTION
 ///////////////////////////////////////////////////////
 
 
+Create install / uninstall dialog for bash auto install
+
+
 Alphabetically order printout from .../debugging/exchange-and-pairing-info.php
 
 
