--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -62,6 +62,18 @@ FEATURES / STRUCTURING SECTION
 ///////////////////////////////////////////////////////
 
 
+For scalable chart data, maybe run once daily during cron runtimes creating 1 hour (or greater) time interval chart data stores, using timestamp info in the default chart data store. Then use those for the initial chart loads if the chart data is more than 3 months worth (or whatever time period).
+
+
+Create chart interval function that divides the desired chart timeline period by the number of maximum data points the chart should ever load, to get the data point time interval, then caches the corresponding timestamped data point intervals into an updated chart for that time period every 24 hours. So we'd have like 6 / 12 / 18 month charts (as examples).
+
+
+In the "loading charts" logic, add a timer that logs the time it takes to load all activated charts, and prints results to the console log.
+
+
+Always prune system stats chart data (during scheduled maintenance) to never save chart data over 90 days old.
+
+
 Create install / uninstall dialog for bash auto install
 
 
@@ -87,12 +99,6 @@ Build tool that finds localbitcoins markets not added yet
 
 
 Audio / Visual Alerts setting: add new drop-down parameter, with values increase | decrease | both
-
-
-For scalable chart data, maybe run once daily during cron runtimes creating 1 hour (or greater) time interval chart data stores, using timestamp info in the default chart data store. Then use those for the initial chart loads if the chart data is more than 3 months worth (or whatever time period).
-
-
-Create chart interval function that divides the desired chart timeline period by the number of maximum data points the chart should ever load, to get the data point time interval, then caches the corresponding timestamped data point intervals into an updated chart for that time period every 24 hours. So we'd have like 6 / 12 / 18 month charts (as examples).
 
 
 Add IFTTT support (alexa / google home / whatever supported devices).
