--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -117,7 +117,7 @@ Add header login nav like prototype for zilliqa block explorer (use the develope
 Add an alert bell icon in upcoming header login nav, and have alerts make it red and be a drop-down info bubble clicking it, rather than alerts printed in the footer.
 
 
-Sections / pages for upcoming admin config interface.
+Sections / pages for upcoming admin config interface SHOULD BE VERTICAL LEFT-SIDE-BAR MENU TABS (RATHER THAN HORIZONTAL TOP NAV TABS), TO DIFFERENTIATE BETWEEN ADMIN AND USER INTERFACE...IT ALSO LETS US ADD #WAY MORE TABS# FOR ADMIN SETTINGS. CONSIDER WHETHER THE TABS SHOULD ALL BE LOADED AT ONCE, OR LOAD AS SEPARATE PAGES VIA A "admin.php?section=XXXX" GET REQUEST URI / TEMPLATE SYSTEM (PUTTING EVERYTHING IN AN /admin/ SUBDIRECTORY IS WAAAAAAAAAY MORE COMPLEX / ISN'T AS FEASIBLE, DUE TO THE CURRENT TEMPLATE AND config.php APP LOADING SYSTEM...IT ALSO MAKES CONTROLLING AUTHENTICATION SIMPLER [everything goes through admin.php]). 
 
 
 On admin config page, have "reset to default settings" button (with js confirm alert when pushed) that refreshes the cached app_config from config.php settings.
