--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2917,6 +2917,10 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Bug fix for trading notes text area auto-resize
 
+-Initial webhook support structuring (in-progress)
+
+-Initial admin area interface structuring (in-progress)
+
 IMPORTANT NOTES: 
 
 v4.09.0 AND HIGHER SWITCHED FROM "FREE MEMORY" SYSTEM STATS, OVER TO "MEMORY USED" SYSTEM STATS (WHICH #NOW# CORRECTLY DOES NOT INCLUDE MEMORY BUFFERS / CACHE). SYSTEM STATS CHARTS AFTER UPGRADE TO v4.09.0 OR HIGHER WILL STILL RETAIN OLD SYSTEM STATS DATA FOR MEMORY USAGE, BUT WILL BE LABELED DIFFERENTLY ("USED MEMORY" INSTEAD OF "FREE MEMORY"). JUST IGNORE THE OLDER MEMORY DATA, OR RESET YOUR SYSTEM STATS CHARTS BY DELETING: /cache/charts/system/
