--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -2917,6 +2917,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Additional !CRITICAL! bug fix for pairing_market_value() function overloading the server (SHOULD BE GOOD NOW, SORRY!)
 
+-Raspberry Pi Security documentation
+
 -Bug fix for trading notes text area auto-resize
 
 -Initial webhook support structuring (in-progress)
